[workspace]

[package]
name = "simple-guest-program-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-consensus = { version = "1.0.24", default-features = false}
alloy-primitives = { version = "1.3.0", default-features = false}
alloy-eips = {version = "1.0.24", default-features = false}

reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", rev = "d8451e54e7267f9f1634118d6d279b2216f7e2bb", default-features = false }
reth-stateless = { git = "https://github.com/paradigmxyz/reth", rev = "d8451e54e7267f9f1634118d6d279b2216f7e2bb", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", rev = "d8451e54e7267f9f1634118d6d279b2216f7e2bb", default-features = false }

[features]
sp1-guest = []
risc0-guest = []
default = ["sp1-guest"]
