[package]
name = "simple-guest-program-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
portable-atomic = { version = "1.11.1", default-features = false, features = ["unsafe-assume-single-core"] }
portable-atomic-util = { version = "0.2.4", default-features = false}
bytes = { version = "1.10.1", default-features = false, features = ["extra-platforms"]}
serde = { version = "1.0.219", default-features = false, features = ["alloc"]}
# getrandom = { version = "0.2.16", package = "getrandom", default-features = false, features = ["custom"] }
# reth-stateless = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68", default-features = false }
# stable_deref_trait = { version = "1.2.0", default-features = false }
# yoke = {version = "0.8.0", default-features = false }
# writeable = {version = "0.6.1", default-features = false }
# icu_provider = {version = "2.0.0", default-features = false }
# url = {version = "2.5.4", default-features = false }
#reth-chainspec = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68", default-features = false }
# reth-evm-ethereum = { git = "https://github.com/kevaundray/reth", rev = "03364a836774c72f4e354de924330fee6a41be68" }
# alloy-primitives = { version = "1.2.0"}
tracing-core = { version = "0.1.34", default-features = false}
# alloy-consensus = { version = "1.0.9", default-features = false}
# alloy-eips = { version = "1.0.9", default-features = false, target_has_atomic_load_store = "ptr"}



[features]
sp1-guest = []
risc0-guest = []
